--- a/BambooPlayer/res/values/strings.xml
+++ b/BambooPlayer/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="vitamio_name">BambooPlayer</string>
+    <string name="vitamio_name_label">Bamboo Player\n快捷的视频播放器</string>
     <string name="vitamio_init_decoders">正在安装解码器&#8230;</string>
     <string name="vitamio_videoview_error_title">不能播放该视频</string>
     <string name="vitamio_videoview_error_text_invalid_progressive_playback">你的设备无法播放该视频.</string>
@@ -28,5 +29,7 @@
         <item>普通</item>
         <item>高质</item>
     </string-array>
+    
+    <string name="load_please_wait">正在解析视频,请稍后</string>
     
 </resources>
